# ProjectGarmin

./: .env.example  .gitignore  README.md  dev.ps1  package-lock.json  pyproject.toml
 .dev-scripts/: frontend.dev.ps1
.dev-scripts/: backend.dev.ps1  frontend.dev.ps1
.github/workflows/: ci.yml
app/: main.py
app/api/: audio.py  chat.py  context.py  files.py  images.py  personality.py  sessions.py  settings.py  system.py  theme.py
app/core/: config.py  db.py
app/services/: context_manager.py  ocr.py  personality_service.py  rag.py  search_service.py  session_store.py  summarization.py  system_monitor.py  theme_service.py  token_count.py  transcription.py
docs/: roadmap.md
docs/ADR/: ADR-001-backend-architecture.md  ADR-002-frontend-framework.md  ADR-003-database-choice.md  ADR-004-model-inference-approach.md  ADR-005-rag-architecture.md  ADR-006-development-process.md  ADR-007-conversation-memory-and-context-management.md
docs/PRD/: prd_garmin.md
docs/tasks/: task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md  task-007.md  task-008.md  task-009.md  task-010.md  (+10 more)
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
tests/: conftest.py  test_audio_api.py  test_chat_sse.py  test_file_manager_api.py  test_files_api.py  test_health.py  test_images_api.py  test_personality_api.py  test_personality_session_api.py  test_search_service.py  test_search_settings_api.py  test_sessions_api.py  test_settings_api.py  test_system_usage_api.py  test_theme_api.py
(+28 files in other folders)
